[project]
name = "docling-endpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.76.0",
    "fastapi[standard]>=0.135.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# If using src layout:
[tool.hatch.build.targets.wheel]
packages = ["src/docling_endpoint"]
